--- a/application/views/scripts/beneficio/deficiente.phtml
+++ b/application/views/scripts/beneficio/deficiente.phtml
@@ -6,97 +6,98 @@
 
 <body>
 
-<div class="container fundo">
+    <div class="container fundo">
 
-	  <div class="table-responsive" style="background-color:rgba(0,0,0,0.5); color: white">
-							<table class="table table-bordered text-center" style="background-color:rgba(0,0,0,0.5); color: white">
-								<tr class="text-primary">
-									<th class="fundoTransparente" colspan="4" style="background-color:rgba(0,0,0,0.5); color: white">
-										<center><h3>Novas Solicitações de Benefícios</h3></center>
-									</th>
-								</tr>
-								<tr>
-									<th class="fundoTransparente" colspan="1" style="background-color:rgba(0,0,0,0.5); color: white"><center>CPF</center></th>
-									<th class="fundoTransparente" colspan="1" style="background-color:rgba(0,0,0,0.5); color: white"><center>Nome</center></th>
-									<th class="fundoTransparente" colspan="1" style="background-color:rgba(0,0,0,0.5); color: white"><center>Data de Solicitação</center></th>
-									<th class="fundoTransparente" colspan="1" style="background-color:rgba(0,0,0,0.5); color: white"><center>Situação</center></th>
-								</tr>
-								<? foreach ($this->listarBeneficios as $solicitacaobeneficio): ?>
-			                        <tr>
-			                            <td> <?= $solicitacaobeneficio['cpf'] ?></td>		                        
-			                            <td> <?= $solicitacaobeneficio['nome'] ?></td>
-			                            <td> <?= $solicitacaobeneficio['data_solicitacao'] ?></td>
-			                            <td> <?= $solicitacaobeneficio['idf_situacao_solicitacao'] ?>
-			                            	<a href="<?= '#myModal' . $solicitacaobeneficio['id_solicitacao'] ?>" class="btn" data-toggle="modal"> 
-												<i class="fas fa-edit" style="color:white"></i>
-											</a>
-			                            </td>
-			                        </tr>
-			                           <? endforeach; ?>
-							</table>
-	  
-</div>
-	<!-- Modal -->
-	<? foreach ($this->listarBeneficios as $solicitacaobeneficio): ?>
-<div class="modal fade" id="<?= 'myModal' . $solicitacaobeneficio['id_solicitacao'] ?>" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-    <div class="modal-dialog modal-lg" role="document">
-         <div class="modal-content">
-             <div class="modal-header">
-			     <h4 class="modal-title">PESSOA COM DEFICIÊNCIA</h4>
-                 <button type="button" class="close" data-dismiss="modal">
-					<span>&times;</span>
-				 </button>
-             </div>
-             <div class="modal-body">
-				<div class="container-fluid"> 
-					<div class="row">
-						<div class="table-responsive">
-							<form method="post">
-							  <div class="form-group">
-							  	<div class="col-sm-6">
-									<label >Nome completo:</label>
-									<input type="text" disabled class="form-control" value="<?= $solicitacaobeneficio['nome'] ?> " name="nomeCompleto" id="nomeCompleto">
-									<label >Data de nascimento:</label>
-									<input type="text" disabled class="form-control" value="<?= $solicitacaobeneficio['data_nascimento'] ?>" name="dataNascimento" id="dataNascimento">
-									<label >CPF:</label>
-									<input type="text" disabled class="form-control" value="<?= $solicitacaobeneficio['cpf'] ?>" name="cpf" id="cpf">
-									<label >RG:</label>
-									<input type="text" disabled class="form-control" value="<?= $solicitacaobeneficio['rg'] ?>" name="rg" id="rg">
-									<label> Celular: </label>
-									<input type="text" disabled class="form-control" value="<?= $solicitacaobeneficio['celular'] ?>" name="celular" id="celular">
-								</div>
-								<div class="col-sm-6">
-									<label> Rua: </label>
-									<input type="text" disabled class="form-control" value="<?= $solicitacaobeneficio['rua'] ?>" name="rua" id="rua">
-									<label> Nº: </label>
-									<input type="text" disabled class="form-control" value="<?= $solicitacaobeneficio['numero_casa'] ?>" name="numeroCasa" id="numeroCasa">									
-									<label> Bairro: </label>
-									<input type="text" disabled class="form-control" value="<?= $solicitacaobeneficio['bairro'] ?>" name="bairro" id="bairro">		
-									<label> Qual a deficiência?: </label>
-									<input type="text" disabled class="form-control" name="tipoDeficiencia" id="tipoDeficiencia">								
-									<label >Atestado Médico</label>
-									<br>
-									<button class="btn" name="atestadoMedico" id="atestadoMedico">
-										<i class="fa fa-download" style="color:black"></i>
-										<label style="color:black">
-											<a style="color:black" href="autorizaconcessao/autorizacao.pdf"
-											download="a">Download </a>
-										</label>
-									</button>
-								</div>
-							  </div>
-							  <button type="submit" name="botaoConceder" id="botaoConceder" class="btn btn-success">Conceder</button>
-							  <button type="submit" class="btn btn-danger">Não Conceder</button>							
-							</form>							
-						</div>
-		 			</div>
-				</div>			 
-             </div>
+        <div class="table-responsive" style="background-color:rgba(0,0,0,0.5); color: white">
+            <table class="table table-bordered text-center" style="background-color:rgba(0,0,0,0.5); color: white">
+                <tr class="text-primary">
+                    <th class="fundoTransparente" colspan="4" style="background-color:rgba(0,0,0,0.5); color: white">
+                <center><h3>Novas Solicitações de Benefícios</h3></center>
+                </th>
+                </tr>
+                <tr>
+                    <th class="fundoTransparente" colspan="1" style="background-color:rgba(0,0,0,0.5); color: white"><center>CPF</center></th>
+                <th class="fundoTransparente" colspan="1" style="background-color:rgba(0,0,0,0.5); color: white"><center>Nome</center></th>
+                <th class="fundoTransparente" colspan="1" style="background-color:rgba(0,0,0,0.5); color: white"><center>Data de Solicitação</center></th>
+                <th class="fundoTransparente" colspan="1" style="background-color:rgba(0,0,0,0.5); color: white"><center>Situação</center></th>
+                </tr>
+                <? foreach ($this->listarBeneficios as $solicitacaobeneficio): ?>
+                    <tr>
+                        <td> <?= $solicitacaobeneficio['cpf'] ?></td>		                        
+                        <td> <?= $solicitacaobeneficio['nome'] ?></td>
+                        <td> <?= $solicitacaobeneficio['data_solicitacao'] ?></td>
+                        <td> <?= $solicitacaobeneficio['descricao_situacao'] ?>
+                            <a href="<?= '#myModal' . $solicitacaobeneficio['id_solicitacao'] ?>" class="btn" data-toggle="modal"> 
+                                <i class="fas fa-edit" style="color:white"></i>
+                            </a>
+                        </td>
+                    </tr>
+                <? endforeach; ?>
+            </table>
 
-         </div>
-    </div>
+        </div>
+        <!-- Modal -->
+        <? foreach ($this->listarBeneficios as $solicitacaobeneficio): ?>
+            <div class="modal fade" id="<?= 'myModal' . $solicitacaobeneficio['id_solicitacao'] ?>" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+                <div class="modal-dialog modal-lg" role="document">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h4 class="modal-title">PESSOA COM DEFICIÊNCIA</h4>
+                            <button type="button" class="close" data-dismiss="modal">
+                                <span>&times;</span>
+                            </button>
+                        </div>
+                        <div class="modal-body">
+                            <div class="container-fluid"> 
+                                <div class="row">
+                                    <div class="table-responsive">
+                                        <form method="post">
+                                            <div class="form-group">
+                                                <div class="col-sm-6">
+                                                    <label >Nome completo:</label>
+                                                    <input type="text" disabled class="form-control" value="<?= $solicitacaobeneficio['nome'] ?> " name="nomeCompleto" id="nomeCompleto">
+                                                    <label >Data de nascimento:</label>
+                                                    <input type="text" disabled class="form-control" value="<?= $solicitacaobeneficio['data_nascimento'] ?>" name="dataNascimento" id="dataNascimento">
+                                                    <label >CPF:</label>
+                                                    <input type="text" disabled class="form-control" value="<?= $solicitacaobeneficio['cpf'] ?>" name="cpf" id="cpf">
+                                                    <label >RG:</label>
+                                                    <input type="text" disabled class="form-control" value="<?= $solicitacaobeneficio['rg'] ?>" name="rg" id="rg">
+                                                    <label> Celular: </label>
+                                                    <input type="text" disabled class="form-control" value="<?= $solicitacaobeneficio['celular'] ?>" name="celular" id="celular">
+                                                </div>
+                                                <div class="col-sm-6">
+                                                    <label> Rua: </label>
+                                                    <input type="text" disabled class="form-control" value="<?= $solicitacaobeneficio['rua'] ?>" name="rua" id="rua">
+                                                    <label> Nº: </label>
+                                                    <input type="text" disabled class="form-control" value="<?= $solicitacaobeneficio['numero_casa'] ?>" name="numeroCasa" id="numeroCasa">									
+                                                    <label> Bairro: </label>
+                                                    <input type="text" disabled class="form-control" value="<?= $solicitacaobeneficio['bairro'] ?>" name="bairro" id="bairro">		
+                                                    <label> Qual a deficiência?: </label>
+                                                    <input type="text" disabled class="form-control" value="<?= $solicitacaobeneficio['tipo_deficiencia'] ?> "name="tipoDeficiencia" id="tipoDeficiencia">								
+                                                    <label >Atestado Médico</label>
+                                                    <br>
 
- </div>
-    <? endforeach; ?>
+                                                    <button class="btn" name="atestadoMedico" id="atestadoMedico">
+                                                        <i class="fa fa-download" style="color:black"></i>
+                                                        <label style="color:black">
+                                                            <a style="color:black" href="<?= $solicitacaobeneficio['atestado_medico'] ?>"
+                                                               download="a">Download </a>
+                                                        </label>
+                                                    </button>
+                                                </div>
+                                            </div>
+                                            <button type="submit" name="botaoConceder" id="botaoConceder" class="btn btn-success">Conceder</button>
+                                            <button type="submit" class="btn btn-danger">Não Conceder</button>							
+                                        </form>							
+                                    </div>
+                                </div>
+                            </div>			 
+                        </div>
+
+                    </div>
+                </div>
+
+            </div>
+        <? endforeach; ?>
 
 </body>
