--- a/application/views/scripts/trajeto/index.phtml
+++ b/application/views/scripts/trajeto/index.phtml
@@ -56,7 +56,7 @@
 					<div class="col-6">
 
 						<label for="descricao" id="label">Descrição</label>
-						<input type="text" class="form-control" id="descricao">
+						<input type="text" class="form-control" id="descricao1">
 					</div>
 					<div class="col-5">
 						<input type="hidden" id="id-onibus">
