--- a/application/views/scripts/beneficio/deficiente.phtml
+++ b/application/views/scripts/beneficio/deficiente.phtml
@@ -64,51 +64,58 @@
                                                     <input type="text" disabled class="form-control" value="<?= $solicitacaobeneficio['rg'] ?>" name="rg" id="rg">
                                                     <label> Celular: </label>
                                                     <input type="text" disabled class="form-control" value="<?= $solicitacaobeneficio['celular'] ?>" name="celular" id="celular">
-                                                    <label>Conceder Benefício:</label>
-                                                    <button class="btn-group btn-group-toggle" data-toggle="buttons">
-                                                        <label class="btn btn-outline-dark">
+                                                    <br><label>Conceder Benefício:</label>
+                                                    <br><button class="btn-group btn-group-toggle" data-toggle="buttons">
+                                                        <label class="btn btn-outline-dark" id="nenhum" onclick="alert()">
                                                             <input type="radio" name="options" id="nenhum" name="nenhum" autocomplete="off"> Nenhum
                                                         </label>
-                                                        <label class="btn btn-outline-dark">
-                                                            <input type="radio" name="options" id="meiaPassagem" name="meiaPassagem" autocomplete="off"> Meia-Passagem
+                                                        <label class="btn btn-outline-dark" id="meiaPassagem">
+                                                            <input type="radio" name="options1" name="meiaPassagem" autocomplete="off"> Meia-Passagem
                                                         </label>
-                                                        <label class="btn btn-outline-dark">
-                                                            <input type="radio" name="options" id="isencao" name="isencao" autocomplete="off"> Isenção
+                                                        <label class="btn btn-outline-dark" id="isencao">
+                                                            <input type="radio" name="options2"   name="isencao" autocomplete="off"> Isenção
                                                         </label>
                                                     </button>
-                                                    <br><button type="submit" name="botaoConceder" id="botaoConceder" class="btn btn-success">Salvar</button>
+                       
+                                                    <script type="text/javascript">
+                                                    if (document.getElementById("meiaPassagem").click()){
+                                                                alert();
+                                                            }                                                   
+                                                    </script>        
+
                                                 </div>
-                                                <div class="col-sm-6">
+                                                <div class = "col-sm-6">
                                                     <label> Rua: </label>
-                                                    <input type="text" disabled class="form-control" value="<?= $solicitacaobeneficio['rua'] ?>" name="rua" id="rua">
+                                                    <input type = "text" disabled class = "form-control" value = "<?= $solicitacaobeneficio['rua'] ?>" name = "rua" id = "rua">
                                                     <label> Nº: </label>
-                                                    <input type="text" disabled class="form-control" value="<?= $solicitacaobeneficio['numero_casa'] ?>" name="numeroCasa" id="numeroCasa">									
+                                                    <input type = "text" disabled class = "form-control" value = "<?= $solicitacaobeneficio['numero_casa'] ?>" name = "numeroCasa" id = "numeroCasa">
                                                     <label> Bairro: </label>
-                                                    <input type="text" disabled class="form-control" value="<?= $solicitacaobeneficio['bairro'] ?>" name="bairro" id="bairro">		
+                                                    <input type = "text" disabled class = "form-control" value = "<?= $solicitacaobeneficio['bairro'] ?>" name = "bairro" id = "bairro">
                                                     <label> Qual a deficiência?: </label>
-                                                    <input type="text" disabled class="form-control" value="<?= $solicitacaobeneficio['tipo_deficiencia'] ?> "name="tipoDeficiencia" id="tipoDeficiencia">								
+                                                    <input type = "text" disabled class = "form-control" value = "<?= $solicitacaobeneficio['tipo_deficiencia'] ?> "name = "tipoDeficiencia" id = "tipoDeficiencia">
                                                     <label >Atestado Médico</label>
                                                     <br>
 
-                                                    <button class="btn" name="atestadoMedico" id="atestadoMedico">
-                                                        <i class="fa fa-download" style="color:black"></i>
-                                                        <label style="color:black">
-                                                            <a style="color:black" href="dist/autorizaconcessao/atestadomedico.pdf"
-                                                               download="atestadomedico">Download </a>
+                                                    <button class = "btn" name = "atestadoMedico" id = "atestadoMedico">
+                                                        <i class = "fa fa-download" style = "color:black"></i>
+                                                        <label style = "color:black">
+                                                            <a style = "color:black" href = "dist/autorizaconcessao/atestadomedico.pdf"
+                                                               download = "atestadomedico">Download </a>
                                                         </label>
                                                     </button>
                                                 </div>
-                                            </div>						
-                                        </form>							
+                                            </div>
+                                        </form>
                                     </div>
                                 </div>
-                            </div>			 
+                            </div>
                         </div>
 
                     </div>
                 </div>
 
             </div>
-        <? endforeach; ?>
+        <? endforeach;
+        ?>
 
 </body>
